--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         {% endfor %}  {# 使用 endfor 标签结束 for 语句 #}
     </ul>
     <footer>
-        <small>&copy; 2025 <a href="https://github.com/lxw-2000">Github</a></small>
+        <small>&copy; 2025 <a href="https://github.com/lxw-2000">xuewen</a></small>
     </footer>
     <img alt="Walking Totoro" class= "totoro" src="{{ url_for('static', filename='images/totoro.gif') }}">
 </body>
